--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,4 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap'); */
-/* font-family: "Exo 2", sans-serif; */
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
 
 :root {
@@ -33,6 +32,7 @@ body {
   padding: 0;
   overflow-x: hidden;
   position: relative;
+  font-family: "Exo 2", sans-serif;
 }
 
 /* Animated gradient background */
